--- a/WeatherApp/pom.xml
+++ b/WeatherApp/pom.xml
@@ -11,4 +11,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.weatherapp.WeatherApp</exec.mainClass>
     </properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250107</version>  
+        </dependency>
+    </dependencies>
 </project>
