--- a/WeatherApp/pom.xml
+++ b/WeatherApp/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>json</artifactId>
             <version>20250107</version>  
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 </project>
