--- a/WeatherApp/pom.xml
+++ b/WeatherApp/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>dotenv-java</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.5.4</version>
+        </dependency>
     </dependencies>
 </project>
